@@ -1,6 +1,7 @@
 # 2025.05.12 - 1.0.41
 
 - feat: Added the player's current points to the round summaries (#22)
+- feat: Added the possibility to set the maximum rank point range (#21)
 
 # 2025.04.18 - 1.0.40
 
